tests/.nts/error/links_name_unknown.nts
.chipsets:
.links:
in:1 out:1